...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/csgoFragment">
    <fragment
        android:id="@+id/csgoFragment"
        android:name="com.example.calesports.ui.csgo.CsgoFragment"
        android:label="Cryptonic - CS:GO">
        <action
            android:id="@+id/action_csgoFragment_to_matchInfoFragment"
            app:destination="@id/matchInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>
...
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/lolFragment"
        android:name="com.example.calesports.ui.lol.LolFragment"
        android:label="Cryptonic - League of Legends">
        <action
            android:id="@+id/action_lolFragment_to_matchInfoFragment"
            app:destination="@id/matchInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>
...
