...
                android:textSize="18sp"
                android:text="@{viewModel.teamTwo.name}" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/team_two_players"
            android:layout_width="207dp"
            android:layout_height="393dp"
            android:layout_marginTop="30dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@+id/team_one_players"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="1.0"
            app:spanCount="1"
            app:teamTwoListData="@{viewModel.playersTwo}"
            tools:listitem="@layout/player_entry_team_two" />
...
